🐛 Fix browser flickering by showing all browsers and bringing focused to the front

--- a/components/tabs/content/browser-panel.css
+++ b/components/tabs/content/browser-panel.css
@@ -7,11 +7,14 @@ browser-panel {
     flex: 10000 10000;
     min-height: 0;
     flex-direction: column;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 browser-panel:not([visible]) {
-    display: none;
-    visibility: hidden;
+    z-index: -2147483647;
 }
 
 browser-panel browser-frame {
